@@ -1,3 +1,6 @@
+2005-09-19 krake:
+    * API docs for central format handling classes
+    
 2005-09-11 krake:
     * Removed duplicate entry for --search in manpage
     
